--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </nav>
 </header>
 <section id="video" class="home">
-  <h1>WHITE EDITION</h1>
-  <h2>E.S.T 2013</h2>
+  <h1>I JEONG HAN</h1>
+  <h2>DEPARTMENT OF STATISTICS</h2>
 </section>
 <section id="main-content">
   <div class="text-intro">
@@ -29,18 +29,19 @@
   </div>
   <div class="columns features">
     <div class="one-third first">
-      <h3>Minimal</h3>
-      <p>Bacon ipsum dolor sit amet cow ham beef, ground round t-bone meatloaf fatback sirloin pork chop swine pig. Venison shoulder prosciutto turkey tri-tip kielbasa andouille ham hock beef ribs. Meatloaf meatball doner filet mignon shankle.</p>
+      <h3>News</h3>
+      <p>Hi.</p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
-      <h3>HTML5/CSS3</h3>
-      <p>Chuck venison short ribs, pork loin strip steak turducken chicken boudin doner tail cow pork chop spare ribs.</p>
+      <h3>R/Python</h3>
+      <p>Hello.</p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
-      <h3>Totally Free</h3>
-      <p>Capicola prosciutto shankle frankfurter ham hock. Beef ribs t-bone rump, short ribs jerky turkey ham capicola pancetta filet mignon turducken boudin biltong venison shank.</p>
+      <h3>Education</h3>
+      <p>서울시립대학교 통계학 석사과정</p>
+      <p>동국대학교 통계학 전공</p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
   </div>
