--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="columns features">
     <div class="one-third first">
       <h3>News</h3>
-      <p>Hi.</p>
+      <p>Hi. </p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
@@ -40,8 +40,7 @@
     </div>
     <div class="one-third">
       <h3>Education</h3>
-      <p>서울시립대학교 통계학 석사과정</p>
-      <p>동국대학교 통계학 전공</p>
+      <p>서울시립대학교 통계학과 석사과정</p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
   </div>
