--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <form action="#" method="post" id="contact-form">
       <textarea id="message" maxlength="10000" name="message" placeholder="Wazup ?"></textarea>
       <div class="crayonico"></div>
-      <input class="text-input" id="senderEmail" maxlength="50" name="email" placeholder="E-mail" type="email">
+      <input class="text-input" id="senderEmail" maxlength="50" name="email" placeholder="haniijeong827@gmail.com" type="email">
       <div class="emailico"></div>
       <input class="btn btn-input" id="sendMessage" name="sendMessage" type="submit" value="IM DONE">
     </form>
