--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>White Edition</title>
+<title>>Welcome 12jeong's</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -30,17 +30,18 @@
   <div class="columns features">
     <div class="one-third first">
       <h3>News</h3>
-      <p>Hi.~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ </p>
+      <p>Hi.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
       <h3>R/Python</h3>
-      <p>Hello.~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ </p>
+      <p>Hello.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
       <h3>Education</h3>
       <p>서울시립대학교 통계학과 석사과정</p>
+      <p>동국대학교 통계학 전공</p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
   </div>
