--- a/projets.html
+++ b/projets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>White Edition | Projects</title>
+<title>Welcome 12jeong's | Projects</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
