--- a/projets.html
+++ b/projets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Welcome 12jeong's | Projects</title>
+<title>Welcome 12jeong's | Works</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -24,7 +24,7 @@
   </div>
   <div class="columns">
     <div class="img-first"><a href="#"><img src="images/supview.jpg" alt=""></a></div>
-    <div class="img-second"><a href="#"><img src="images/bouche.jpg" alt=""></a></div>
+    <div class="img-second"><a href="#"><img src="images/shanghai.jpg" alt=""></a></div>
   </div>
   </div>
 </section>
