--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="columns features">
     <div class="one-third first">
       <h3>News</h3>
-      <p>Hi.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
+      <p> Extreme Distribution, Alternating Direction Method of Multipliers </p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
