--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
     </div>
     <div class="one-third">
       <h3>R/Python</h3>
-      <p>I get started learning Python for data science </p>
+      <p>I get started learning Python for data science. </p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
       <h3>Education</h3>
       <p>서울시립대학교 통계학과 석사과정</p>
-      <p>MASTER'S COURSE OF STATISTICS University of Seoul</p>
+      <p>MASTER'S COURSE OF STATISTICS </p>
+      <p>University of Seoul</p>
       <p>동국대학교 통계학 전공</p>
-      <p>BACHELOR'S DEGREE OF STATISTICS Dongguk University </p>
+      <p>BACHELOR'S DEGREE OF STATISTICS </p>
+      <p>Dongguk University </p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
   </div>
