--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
     <div class="one-third">
       <h3>R/Python</h3>
       <p>I get started learning Python for data science. </p>
+      
+    </div>
+         <div class="col-md-6 col-sm-12">
+           <div class="skillbar clearfix " data-percent="70%">
+               <div class="skillbar-title"><span>R</span></div>
+               <div class="skillbar-bar"></div>
+               <div class="skill-bar-percent"></div>
+           </div> <!-- End Skill Bar -->
+
+           <div class="skillbar clearfix " data-percent="30%">
+               <div class="skillbar-title"><span>Python</span></div>
+               <div class="skillbar-bar"></div>
+               <div class="skill-bar-percent"></div>
+           </div> <!-- End Skill Bar -->
+           </div>
+
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
