--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </div>
     <div class="one-third">
       <h3>R/Python</h3>
+      <p>I am familiar with R. </p>
       <p>I get started learning Python for data science. </p>
 
     </div>
