--- a/index.html
+++ b/index.html
@@ -37,21 +37,14 @@
       <h3>R/Python</h3>
       <p>I am familiar with R. </p>
       <p>I get started learning Python for data science. </p>
-
-    </div>
-           <div class="skillbar clearfix " data-percent="70%">
-               <div class="skillbar-title"><span>R</span></div>
-               <div class="skillbar-bar"></div>
-               <div class="skill-bar-percent"></div>
-           </div> <!-- End Skill Bar -->
-
-           <div class="skillbar clearfix " data-percent="30%">
-               <div class="skillbar-title"><span>Python</span></div>
-               <div class="skillbar-bar"></div>
-               <div class="skill-bar-percent"></div>
-           </div> <!-- End Skill Bar -->
-           </div>
-
+      <p>HTML</p>
+      <div class="container">
+        <div class="skills html">90%</div>
+      </div>
+      <p>CSS</p>
+      <div class="container">
+        <div class="skills css">80%</div>
+      </div>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
