--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
       <h3>R/Python</h3>
       <p>I am familiar with R. </p>
       <p>I get started learning Python for data science. </p>
+      <div class="skillbar clearfix " data-percent="70%">
+                    <div class="skillbar-title"><span>R</span></div>
+                    <div class="skillbar-bar"></div>
+                    <div class="skill-bar-percent"></div>
+                </div> <!-- End Skill Bar -->
+
+                <div class="skillbar clearfix " data-percent="30%">
+                    <div class="skillbar-title"><span>Python</span></div>
+                    <div class="skillbar-bar"></div>
+                    <div class="skill-bar-percent"></div>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
