--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                     <div class="skill-bar-percent"></div>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
+    </div>
     <div class="one-third">
       <h3>Education</h3>
       <p>서울시립대학교 통계학과 석사과정</p>
