--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <div class="skillbar-title"><span>Python</span></div>
                     <div class="skillbar-bar"></div>
                     <div class="skill-bar-percent"></div>
+                </div> <!-- End Skill Bar -->
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     </div>
