--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     </div>
     <div class="one-third">
       <h3>R/Python</h3>
-      <p>I am familiar with R. </p>
-      <p>I get started learning Python for data science. </p>
+      <p>I am familiar with R. I get started learning Python for data science. </p>
       <p> . </p>
       <div class="columns">
         <div class="img-first"><a href="#"><img src="images/programming_2jeong.PNG" alt=""></a></div>
