--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
       <p>I am familiar with R. I get started learning Python for data science. </p>
       <p> . </p>
       <div class="columns">
-        <div class="img-first"><a href="#"><img src="images/programming_2jeong.PNG" alt=""></a></div>
+        <div class="img-first"><a href="#"><img src="images/R_2jeong.PNG" alt=""></a></div>
+        <div class="img-first"><a href="#"><img src="images/python_2jeong.PNG" alt=""></a></div>
+        <div class="img-first"><a href="#"><img src="images/sas_2jeong.PNG" alt=""></a></div>
       </div>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
