--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     <div class="one-third">
       <h3>R/Python</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
-      <p> . </p>
       <div class="columns">
         <div class="img-first"><a href="#"><img src="images/R_2jeong.PNG" alt=""></a></div>
         <div class="img-first"><a href="#"><img src="images/python_2jeong.PNG" alt=""></a></div>
@@ -44,7 +43,7 @@
     </div>
     <div class="one-third">
       <h3>Education</h3>
-      <p>서울시립대학교 통계학과 석사과정</p>
+      <p>서울시립대학교 통계학과 석사과정 abcdddddddddddddd</p>
       <p>MASTER'S COURSE OF STATISTICS </p>
       <p>University of Seoul</p>
       <p>동국대학교 통계학 전공</p>
