--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <div class="one-third">
       <h3>HTML5/CSS3</h3>
       <p>Chuck venison short ribs, pork loin strip steak turducken chicken boudin doner tail cow pork chop spare ribs.</p>
+        <div class="img-first"><a href="#"><img src="images/R_2jeong.PNG" alt=""></a></div>
+        <div class="img-first"><a href="#"><img src="images/python_2jeong.PNG" alt=""></a></div>
+        <div class="img-first"><a href="#"><img src="images/sas_2jeong.PNG" alt=""></a></div>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
