--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </nav>
 </header>
 <section id="video" class="home">
-  <h1>WHITE EDITION</h1>
-  <h2>E.S.T 2013</h2>
+  <h1>I JEONG HAN</h1>
+  <h2>DEPARTMENT OF STATISTICS</h2>
 </section>
 <section id="main-content">
   <div class="text-intro">
@@ -29,16 +29,16 @@
   </div>
   <div class="columns features">
     <div class="one-third first">
-      <h3>Minimal</h3>
-      <p>Bacon ipsum dolor sit amet cow ham beef, ground round t-bone meatloaf fatback sirloin pork chop swine pig. Venison shoulder prosciutto turkey tri-tip kielbasa andouille ham hock beef ribs. Meatloaf meatball doner filet mignon shankle.</p>
+      <h3>Latest News</h3>
+      <p>Extreme Distribution, Alternating Direction Method of Multipliers.</p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
-      <h3>HTML5/CSS3</h3>
-      <p>Chuck venison short ribs, pork loin strip steak turducken chicken boudin doner tail cow pork chop spare ribs.</p>
-        <div class="img-first"><a href="#"><img src="images/R_2jeong.PNG" alt=""></a></div>
-        <div class="img-first"><a href="#"><img src="images/python_2jeong.PNG" alt=""></a></div>
-        <div class="img-first"><a href="#"><img src="images/sas_2jeong.PNG" alt=""></a></div>
+      <h3>R/Python</h3>
+      <p>I am familiar with R. I get started learning Python for data science. </p>
+        <div class="img-first"><a href="#"><img src="images/R_2jeong.PNG" alt="" width="110%"></a></div>
+        <div class="img-first"><a href="#"><img src="images/python_2jeong.PNG" alt="" width="110%"></a></div>
+        <div class="img-first"><a href="#"><img src="images/sas_2jeong.PNG" alt="" width="110%"></a></div>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
