--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
     <div class="one-third">
       <h3>R/Python</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
-        <div class="img-first"><a href="#"><img src="images/R_2jeong.PNG" alt="" width="110%"></a></div>
-        <div class="img-first"><a href="#"><img src="images/python_2jeong.PNG" alt="" width="110%"></a></div>
-        <div class="img-first"><a href="#"><img src="images/sas_2jeong.PNG" alt="" width="110%"></a></div>
+        <div class="img-first"><a href="#"><img src="images/R_2jeong.PNG" alt="" width="130%"></a></div>
+        <div class="img-first"><a href="#"><img src="images/python_2jeong.PNG" alt="" width="130%"></a></div>
+        <div class="img-first"><a href="#"><img src="images/sas_2jeong.PNG" alt="" width="130%"></a></div>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="one-third">
-      <h3>Totally Free</h3>
-      <p>Capicola prosciutto shankle frankfurter ham hock. Beef ribs t-bone rump, short ribs jerky turkey ham capicola pancetta filet mignon turducken boudin biltong venison shank.</p>
+      <h3>Education</h3>
+      <p>MASTER'S COURSE OF STATISTICS </p>
+      <p>University of Seoul</p>
+      <p>BACHELOR'S DEGREE OF STATISTICS </p>
+      <p>Dongguk University </p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
   </div>
