--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>White Edition</title>
+<title>Welcome 12jeong's</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -36,9 +36,9 @@
     <div class="one-third">
       <h3>R/Python</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
-        <div class="img-first"><a href="#"><img src="images/R_2jeong.PNG" alt="" width="130%"></a></div>
-        <div class="img-first"><a href="#"><img src="images/python_2jeong.PNG" alt="" width="130%"></a></div>
-        <div class="img-first"><a href="#"><img src="images/sas_2jeong.PNG" alt="" width="130%"></a></div>
+        <div class="img-first"><a href="#"><img src="images/R_2jeong.PNG" alt="" width="120%"></a></div>
+        <div class="img-first"><a href="#"><img src="images/python_2jeong.PNG" alt="" width="120%"></a></div>
+        <div class="img-first"><a href="#"><img src="images/sas_2jeong.PNG" alt="" width="120%"></a></div>
     </div>
     <div class="one-third">
       <h3>Education</h3>
