--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
     <div class="one-third">
       <h3>R/Python</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
-        <div class="img-first"><a href="#"><img src="images/R_2jeong.PNG" alt="" width="110%"></a></div>
-        <div class="img-first"><a href="#"><img src="images/python_2jeong.PNG" alt="" width="110%"></a></div>
-        <div class="img-first"><a href="#"><img src="images/sas_2jeong.PNG" alt="" width="110%"></a></div>
+        <div class="columns">
+        <div class="img-first"><a href="#"><img src="images/R_2jeong.PNG" alt=""></a></div>
+        <div class="img-second"><a href="#"><img src="images/python_2jeong.PNG" alt=""></a></div>
+        </div>
     </div>
     <div class="one-third">
       <h3>Education</h3>
