--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <h3>R/Python</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
         <div class="columns">
-        <div><a href="#"><img src="images/R_2jeong.PNG" alt=""></a></div>
-        <div><a href="#"><img src="images/python_2jeong.PNG" alt=""></a></div>
+        <div><a href="#"><img src="images/R_2jeong.PNG" alt="" style="opacity:0.7"></a></div>
+        <div><a href="#"><img src="images/python_2jeong.PNG" alt="" style="opacity:0.7"></a></div>
         </div>
     </div>
     <div class="one-third">
