--- a/index.html
+++ b/index.html
@@ -36,10 +36,15 @@
     <div class="one-third">
       <h3>R/Python</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
-        <div class="columns">
-        <div><a href="#"><img src="images/R_2jeong.PNG" alt="" style="opacity:0.7"></a></div>
-        <div><a href="#"><img src="images/python_2jeong.PNG" alt="" style="opacity:0.7"></a></div>
-        </div>
+<div class="threesteps">
+  <a href="#"><img src="images/R_2jeong.PNG" alt="" style="opacity:0.7"></a>
+</div>         
+      <div class="threesteps">
+  <a href="#"><img src="images/python_2jeong.PNG" alt="" style="opacity:0.7"></a>
+</div>  
+      <div class="threesteps">
+  <a href="#"><img src="images/sas_2jeong.PNG" alt="" style="opacity:0.7"></a>
+</div>  
     </div>
     <div class="one-third">
       <h3>Education</h3>
