--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
     <h2>About</h2>
   </div>
   <div class="columns features">
-    <div class="one-third first">
+      <div class="container">
+        <div>
       <h3>Latest News</h3>
       <p>Extreme Distribution, Alternating Direction Method of Multipliers.</p>
       <p><a href="#" class="more">En savoir plus</a></p>
-    </div>
-    <div class="one-third">
+        </div>
+      <div class="container">
+        <div>
       <h3>R/Python</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
       
@@ -43,7 +45,8 @@
   <div> <a href="#"><img src="images/sas_2jeong.PNG" alt="" style="opacity:0.7"></a></div>
 </div>
     </div>
-    <div class="one-third">
+      <div class="container">
+        <div>
       <h3>Education</h3>
       <p>MASTER'S COURSE OF STATISTICS </p>
       <p>University of Seoul</p>
