--- a/index.html
+++ b/index.html
@@ -34,18 +34,15 @@
       <p>Extreme Distribution, Alternating Direction Method of Multipliers.</p>
       <p><a href="#" class="more">En savoir plus</a></p>
         </div>
-      <div class="container">
         <div>
       <h3>R/Python</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
-      
       <div class="container">
-  <div><a href="#"><img src="images/R_2jeong.PNG" alt="" style="opacity:0.7"></a></div>
-  <div><a href="#"><img src="images/python_2jeong.PNG" alt="" style="opacity:0.7"></a></div>  
-  <div> <a href="#"><img src="images/sas_2jeong.PNG" alt="" style="opacity:0.7"></a></div>
+  <div><a href="#"><img src="images/R_2jeong.PNG" alt="" style="opacity:0.7" onmouseover="this.style.opacirt='1'"></a></div>
+  <div><a href="#"><img src="images/python_2jeong.PNG" alt="" style="opacity:0.7" onmouseover="this.style.opacirt='1'"></a></div>  
+  <div> <a href="#"><img src="images/sas_2jeong.PNG" alt="" style="opacity:0.7" onmouseover="this.style.opacirt='1'"></a></div>
 </div>
     </div>
-      <div class="container">
         <div>
       <h3>Education</h3>
       <p>MASTER'S COURSE OF STATISTICS </p>
