--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
     <h2>About</h2>
   </div>
   <div class="columns features">
-      <div class="container">
+    <div class="one-third">
         <div>
       <h3>Latest News</h3>
       <p>Extreme Distribution, Alternating Direction Method of Multipliers.</p>
       <p><a href="#" class="more">En savoir plus</a></p>
         </div>
-        <div>
+    <div class="one-third">
       <h3>R/Python</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
-      <div class="container">
+    <div class="one-third">
   <div><a href="#"><img src="images/R_2jeong.PNG" alt="" style="opacity:0.7" onmouseover="this.style.opacirt='1'"></a></div>
   <div><a href="#"><img src="images/python_2jeong.PNG" alt="" style="opacity:0.7" onmouseover="this.style.opacirt='1'"></a></div>  
   <div> <a href="#"><img src="images/sas_2jeong.PNG" alt="" style="opacity:0.7" onmouseover="this.style.opacirt='1'"></a></div>
 </div>
     </div>
-        <div>
+    <div class="one-third">
       <h3>Education</h3>
       <p>MASTER'S COURSE OF STATISTICS </p>
       <p>University of Seoul</p>
