--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       <h3>R/Python</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
       <div class="container">
-        <div><a href="#"><img src="images/R_2jeong.PNG" alt="" style="opacity:0.7" onmouseover="this.style.opacirt='1'" onmouseout="this.style.opacirt='0.7'"></a></div>
-        <div><a href="#"><img src="images/python_2jeong.PNG" alt="" style="opacity:0.7" onmouseover="this.style.opacirt='1'" onmouseout="this.style.opacirt='0.7'"></a></div>  
-        <div> <a href="#"><img src="images/sas_2jeong.PNG" alt="" style="opacity:0.7" onmouseover="this.style.opacirt='1'" onmouseout="this.style.opacirt='0.7'"></a></div>
+        <div><a href="#"><img src="images/R_2jeong.PNG" alt="" style="opacity:0.7" onmouseover="this.style.opacity='1'" onmouseout="this.style.opacity='0.7'"></a></div>
+        <div><a href="#"><img src="images/python_2jeong.PNG" alt="" style="opacity:0.7" onmouseover="this.style.opacity='1'" onmouseout="this.style.opacity='0.7'"></a></div>  
+        <div> <a href="#"><img src="images/sas_2jeong.PNG" alt="" style="opacity:0.7" onmouseover="this.style.opacity='1'" onmouseout="this.style.opacity='0.7'"></a></div>
       </div>
     </div>
     <div class="one-third">
