--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="imgeff"><a href="#"><img src="images/sas_2jeong.PNG" alt=""></a></div>
       </div>
     </div>
-    <div class="one-third">
+    <div class="one-third-final">
       <h3>Education</h3>
       <p>MASTER'S COURSE OF STATISTICS </p>
       <p>University of Seoul</p>
