--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </div>
     <div class="one-third-final">
-      <h3>Education</h3>
+      <h3>Education rrr</h3>
       <p>MASTER'S COURSE OF STATISTICS </p>
       <p>University of Seoul</p>
       <p>BACHELOR'S DEGREE OF STATISTICS </p>
