--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2>About</h2>
   </div>
   <div class="columns features">
-    <div class="one-third">
+    <div class="one-third first">
       <h3>Latest News</h3>
       <p>Extreme Distribution, Alternating Direction Method of Multipliers.</p>
       <p><a href="#" class="more">En savoir plus</a></p>
@@ -42,8 +42,8 @@
         <div class="imgeff"><a href="#"><img src="images/sas_2jeong.PNG" alt=""></a></div>
       </div>
     </div>
-    <div class="one-third-final">
-      <h3>Education rrrrr</h3>
+    <div class="one-third">
+      <h3>Education</h3>
       <p>MASTER'S COURSE OF STATISTICS </p>
       <p>University of Seoul</p>
       <p>BACHELOR'S DEGREE OF STATISTICS </p>
