--- a/index.html
+++ b/index.html
@@ -28,12 +28,20 @@
     <h2>About</h2>
   </div>
   <div class="columns features">
-    <div class="one-third first">
+    <div style="float: left;">
       <h3>Latest News</h3>
       <p>Extreme Distribution, Alternating Direction Method of Multipliers.</p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
-    <div class="one-third">
+    <div style="float: right;">
+      <h3>Education</h3>
+      <p>MASTER'S COURSE OF STATISTICS </p>
+      <p>University of Seoul</p>
+      <p>BACHELOR'S DEGREE OF STATISTICS </p>
+      <p>Dongguk University </p>
+      <p><a href="#" class="more">En savoir plus</a></p>
+    </div>
+    <div> 
       <h3>R/Python</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
       <div class="container">
@@ -41,14 +49,6 @@
         <div class="imgeff"><a href="#"><img src="images/python_2jeong.PNG" alt=""></a></div>  
         <div class="imgeff"><a href="#"><img src="images/sas_2jeong.PNG" alt=""></a></div>
       </div>
-    </div>
-    <div class="one-third">
-      <h3>Education</h3>
-      <p>MASTER'S COURSE OF STATISTICS </p>
-      <p>University of Seoul</p>
-      <p>BACHELOR'S DEGREE OF STATISTICS </p>
-      <p>Dongguk University </p>
-      <p><a href="#" class="more">En savoir plus</a></p>
     </div>
   </div>
 </section>
