--- a/index.html
+++ b/index.html
@@ -28,27 +28,24 @@
     <h2>About</h2>
   </div>
   <div class="columns features">
-    <div style="float: left;">
-      <h3>Latest News</h3>
+    <div id="container">
+      <section class="left-column"><h3>Latest News</h3>
       <p>Extreme Distribution, Alternating Direction Method of Multipliers.</p>
-      <p><a href="#" class="more">En savoir plus</a></p>
-    </div>
-    <div style="float: right;">
-      <h3>Education</h3>
+      <p><a href="#" class="more">En savoir plus</a></p></section>
+      <section class="right-column"><h3>Education</h3>
       <p>MASTER'S COURSE OF STATISTICS </p>
       <p>University of Seoul</p>
       <p>BACHELOR'S DEGREE OF STATISTICS </p>
       <p>Dongguk University </p>
-      <p><a href="#" class="more">En savoir plus</a></p>
-    </div>
-    <div> 
-      <h3>R/Python</h3>
+      <p><a href="#" class="more">En savoir plus</a></p></section>
+      <section class="center-column">      <h3>R/Python</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
       <div class="container">
         <div class="imgeff"><a href="#"><img src="images/R_2jeong.PNG" alt=""></a></div>
         <div class="imgeff"><a href="#"><img src="images/python_2jeong.PNG" alt=""></a></div>  
         <div class="imgeff"><a href="#"><img src="images/sas_2jeong.PNG" alt=""></a></div>
-      </div>
+      </div></section>
+    </div>
     </div>
   </div>
 </section>
