--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h3>R/Python</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
       <div class="container">
-        <div class="imgeff"><a href="#"><img src="images/R_2jeong.PNG" alt=""></a></div>
+        <div class="imgeff"><a href="https://en.wikipedia.org/wiki/R_(programming_language)"><img src="images/R_2jeong.PNG" alt=""></a></div>
         <div class="imgeff"><a href="#"><img src="images/python_2jeong.PNG" alt=""></a></div>  
         <div class="imgeff"><a href="#"><img src="images/sas_2jeong.PNG" alt=""></a></div>
       </div>
