--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
 </section>
 <section id="main-content">
   <div class="text-intro">
-    <h2>About</h2>
+    <h2>About Me</h2>
   </div>
   <div class="columns features">   
     <div class="third-left">
-      <h3>Latest News</h3>
-      <p>Extreme Distribution, Alternating Direction Method of Multipliers.</p>
+      <h3>Contact</h3>
+      <p>If you want something to be built or just to say hi, feel free to shoot me a message.</p>
+      <p>haniijeong827@gmail.com</p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="third-left">
-      <h3>R/Python</h3>
+      <h3>Skills</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
       <div class="container">
         <div class="imgeff"><a href="https://en.wikipedia.org/wiki/R_(programming_language)" target = "_blank"><img src="images/R_2jeong.PNG" alt=""></a></div>
