--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
   </div>
   <div class="columns features">   
     <div class="third-left">
-      <h3>Contact</h3>
-      <p>If you want something to be built or just to say hi, feel free to shoot me a message.</p>
+      <h3>Profile</h3>
+      <p>FULL NAME:<p>
+      <p>I JEONG HAN<p>
+      <p>BIRTH DATE:<p>
+      <p>August 27, 1994<p>
+      <p>JOB:<p>
+      <p>Student<p>
+      <p>EMAIL:<p>
       <p>haniijeong827@gmail.com</p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
