--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
   </div>
   <div class="columns features">
     <form action="#" method="post" id="contact-form">
-      <textarea id="message" maxlength="10000" name="message" placeholder="Wazup ?"></textarea>
+      <textarea id="message" maxlength="10000" name="message" placeholder="If you want something to be built or just to say hi, feel free to shoot me a message."></textarea>
       <div class="crayonico"></div>
       <input class="text-input" id="senderEmail" maxlength="50" name="email" placeholder="haniijeong827@gmail.com" type="email">
       <div class="emailico"></div>
