--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
   <div class="columns features">   
     <div class="third-left">
       <h3>Profile</h3>
-      <p>FULL NAME:<p>
-      <p>I JEONG HAN<p>
-      <p>BIRTH DATE:<p>
-      <p>August 27, 1994<p>
-      <p>JOB:<p>
-      <p>Student<p>
-      <p>EMAIL:<p>
+      <p>FULL NAME: I Jjeong Han</p>
+      <p>BIRTH DATE:</p>
+      <p>August 27, 1994</p>
+      <p>JOB:</p>
+      <p>Student</p>
+      <p>EMAIL:</p>
       <p>haniijeong827@gmail.com</p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
