--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+Skip to content
+ 
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ @12jeong Sign out
+0
+1 0 12jeong/12jeong.github.io
+ Code  Issues 0  Pull requests 0  Projects 0  Wiki  Insights  Settings
+12jeong.github.io/index.html
+6bbe617  12 minutes ago
+@12jeong 12jeong Update index.html
+      
+61 lines (60 sloc)  2.12 KB
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -29,13 +46,8 @@
   </div>
   <div class="columns features">   
     <div class="third-left">
-      <h3>Profile</h3>
-      <p>FULL NAME: I Jjeong Han</p>
-      <p>BIRTH DATE:</p>
-      <p>August 27, 1994</p>
-      <p>JOB:</p>
-      <p>Student</p>
-      <p>EMAIL:</p>
+      <h3>Contact</h3>
+      <p>If you want something to be built or just to say hi, feel free to shoot me a message.</p>
       <p>haniijeong827@gmail.com</p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
