--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Welcome 12jeong's</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="shortcut icon" type="image⁄x-icon" href="images/homepage.png">
 </head>
 <body>
 <header>
@@ -27,7 +28,7 @@
   <div class="text-intro">
     <h2>About Me</h2>
   </div>
-  <div class="columns features">   
+  <div class="columns features">
     <div class="third-left">
       <h3>Contact</h3>
       <p>If you want something to be built or just to say hi, feel free to shoot me a message.</p>
@@ -40,7 +41,7 @@
       <div class="container">
         <div class="imgeff"><a href="https://en.wikipedia.org/wiki/R_(programming_language)" target = "_blank"><img src="images/R_2jeong.PNG" alt=""></a></div>
         <div class="imgeff"><a href="https://en.wikipedia.org/wiki/Python_(programming_language)" target = "_blank"><img src="images/python_2jeong.PNG" alt=""></a></div>
-        <div class="imgeff"><a href="https://en.wikipedia.org/wiki/SAS_(software)" target = "_blank"><img src="images/sas_2jeong.PNG" alt=""></a></div>        
+        <div class="imgeff"><a href="https://en.wikipedia.org/wiki/SAS_(software)" target = "_blank"><img src="images/sas_2jeong.PNG" alt=""></a></div>
       </div>
     </div>
     <div class="third-right">
