--- a/projets.html
+++ b/projets.html
@@ -4,6 +4,7 @@
 <title>Welcome 12jeong's | Works</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="shortcut icon" type="image⁄x-icon" href="images/homepage.png">
 </head>
 <body>
 <header>
