--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <h3>Skills</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
       <div class="container">
-        <div class="imgeff"><a href="https://en.wikipedia.org/wiki/R_(programming_language)" target = "_blank"><img src="images/R_2jeong.PNG" alt=""></a></div>
-        <div class="imgeff"><a href="https://en.wikipedia.org/wiki/Python_(programming_language)" target = "_blank"><img src="images/python_2jeong.PNG" alt=""></a></div>
-        <div class="imgeff"><a href="https://en.wikipedia.org/wiki/SAS_(software)" target = "_blank"><img src="images/sas_2jeong.PNG" alt=""></a></div>
+        <div class="imgeff"><a href="#"><img src="images/R_2jeong.PNG" alt=""></a></div>
+        <div class="imgeff"><a href="#"><img src="images/python_2jeong.PNG" alt=""></a></div>
+        <div class="imgeff"><a href="#"><img src="images/sas_2jeong.PNG" alt=""></a></div>
       </div>
     </div>
     <div class="third-right">
