--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </section>
 <section id="main-content">
   <div class="text-intro">
-    <h2>About Me</h2>
+    <h2>ABOUT ME</h2>
   </div>
   <div class="columns features">
     <div class="third-left">
@@ -46,9 +46,11 @@
     </div>
     <div class="third-right">
       <h3>Education</h3>
-      <p>MASTER'S COURSE OF STATISTICS </p>
+      <p>서울시립대학교 통계학과 석사과정 (2018.3~)</p>
+      <p>Master's course of Statistics </p>
       <p>University of Seoul</p>
-      <p>BACHELOR'S DEGREE OF STATISTICS </p>
+      <p>동국대학교 통계학과 졸업 (2014.3~2018.2)</p>
+      <p>Bachelor Degrees of Statistics </p>
       <p>Dongguk University </p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
