--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Welcome 12jeong's</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="shortcut icon" type="image⁄x-icon" href="images/homepage.png">
+<link rel="shortcut icon" type="image⁄x-icon" href="images/homepage2.png">
 </head>
 <body>
 <header>
