--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Welcome 12jeong's</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="shortcut icon" type="image⁄x-icon" href="images/homepage2.png">
+<link rel="shortcut icon" type="image⁄x-icon" href="images/homepage.png">
 </head>
 <body>
 <header>
@@ -45,7 +45,12 @@
       </div>
     </div>
     <div class="third-right">
+      <div class="one-half">
+      <div class="imgeff"><a href="#"><img src="images/graduate_2jeong.png" alt=""></a></div>
+      </div>
+      <div class="one-half">
       <h3>Education</h3>
+      </div>
       <p>서울시립대학교 통계학과 석사과정 (2018.3~)</p>
       <p>Master's course of Statistics </p>
       <p>University of Seoul</p>
