--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
       <h3>Skills</h3>
       <p>I am familiar with R. I get started learning Python for data science. </p>
       <div class="container">
-        <div class="imgeff"><a href="#"><img src="images/R_2jeong.PNG" alt=""></a></div>
+        <div class="imgeff"><a href="#"><img src="images/R_2jeong.PNG" alt="" ></a></div>
         <div class="imgeff"><a href="#"><img src="images/python_2jeong.PNG" alt=""></a></div>
         <div class="imgeff"><a href="#"><img src="images/sas_2jeong.PNG" alt=""></a></div>
       </div>
     </div>
     <div class="third-right">
       <div class="one-half">
-      <div class="imgeff"><a href="#"><img src="images/graduate_2jeong.png" alt=""></a></div>
+      <div class="imgeff"><a href="#"><img src="images/graduate_2jeong.png" style="max-width:20% height:auto;" alt="" ></a></div>
       </div>
       <div class="one-half">
       <h3>Education</h3>
