--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="third-right">
       <div class="one-half">
-      <div class="imgeff"><a href="#"><img src="images/graduate_2jeong.png" style="max-width:20% height:auto;" alt="" ></a></div>
+      <img src="images/graduate_2jeong.png" style="width:20% height:auto;" alt="" >
       </div>
       <div class="one-half">
       <h3>Education</h3>
