--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       </div>
     </div>
     <div class="third-left">
-      <div>
-      <img src="images/graduate_2jeong.png" style="width:20% height:auto;" alt="" >
-      <h3>Education</h3>
+      <div class="colmuns">
+      <div class="img-first"><img src="images/graduate_2jeong.png" style="width:5% height:auto;" alt="" ></div>
+      <div class="one-half"><h3>Education</h3></div
       </div>
       <p>서울시립대학교 통계학과 석사과정 (2018.3~)</p>
       <p>Master's course of Statistics </p>
