--- a/projets.html
+++ b/projets.html
@@ -29,8 +29,25 @@
   </div>
   </div>
 </section>
-<footer>
-  <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow" href="http://www.iamsupview.be">Supview</a>.</small></div>
-</footer>
+<!--portfolio start-->
+<section class = 'protfolio' id = 'ourwork'>
+  <div class = 'container'>
+      <div class = 'heading'>
+          <h2>Github Works</h2>
+          <h3>What I have done and am doing</h3>
+      </div>
+  </div>
+  <div class = 'row' style='margin: 0 auto 30px auto;'>
+      <div id="feed" style = 'margin: 0 50px;'>
+          <script>
+              GitHubActivity.feed({
+              username: "12jeong",
+              selector: "#feed",
+              limit: 5
+              });
+          </script>
+      </div>
+  </div>
+</section>
 </body>
 </html>
