--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <div class="third-left">
       <div class="colmuns">
-        <div class="one-half"><img src="images/graduate_2jeong.png" style="width:5% height:auto;" alt="" ></div>
+        <div class="one-half"><img src="images/graduate_2jeong.png" alt="" ></div>
         <div class="one-half"><h3>Education</h3></div>
       </div>
       <p>서울시립대학교 통계학과 석사과정 (2018.3~)</p>
