--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
       </div>
     </div>
     <div class="third-left">
-      <div class="colmuns">
-        <div class="one-half"><img src="images/graduate_2jeong.png" alt="" ></div>
-        <div class="one-half"><h3>Education</h3></div>
-      </div>
+      <div class="one-half"><img src="images/graduate_2jeong.png" alt="" ><h3>Education</h3></div>
       <p>서울시립대학교 통계학과 석사과정 (2018.3~)</p>
       <p>Master's course of Statistics </p>
       <p>University of Seoul</p>
