--- a/projets.html
+++ b/projets.html
@@ -36,11 +36,8 @@
 </section>
 <!--portfolio start-->
 <section class = 'protfolio' id = 'ourwork'>
-  <div class = 'container'>
-      <div class = 'heading'>
-          <h2>Github Works</h2>
-          <h3>What I have done and am doing</h3>
-      </div>
+  <div class="text-intro">
+    <h2>GITHUB WORK</h2>
   </div>
   <div class = 'row' style='margin: 0 auto 30px auto;'>
       <div id="feed" style = 'margin: 0 50px;'>
