--- a/index.html
+++ b/index.html
@@ -45,14 +45,17 @@
       </div>
     </div>
     <div class="third-left">
-      <div class="one-half"><img src="images/graduate_2jeong.png" alt="" ><h3>Education</h3></div>
-      <p>서울시립대학교 통계학과 석사과정 (2018.3~)</p>
-      <p>Master's course of Statistics </p>
-      <p>University of Seoul</p>
-      <p>동국대학교 통계학과 졸업 (2014.3~2018.2)</p>
-      <p>Bachelor Degrees of Statistics </p>
-      <p>Dongguk University </p>
-      <p><a href="#" class="more">En savoir plus</a></p>
+      <div float:left; width:33%><img src="images/graduate_2jeong.png" alt="" ></div>
+      <div float:left; width:33%><h3>Education</h3></div>
+      <div>
+        <p>서울시립대학교 통계학과 석사과정 (2018.3~)</p>
+        <p>Master's course of Statistics </p>
+        <p>University of Seoul</p>
+        <p>동국대학교 통계학과 졸업 (2014.3~2018.2)</p>
+        <p>Bachelor Degrees of Statistics </p>
+        <p>Dongguk University </p>
+        <p><a href="#" class="more">En savoir plus</a></p>
+      </div>
     </div>
   </div>
 </section>
