--- a/projets.html
+++ b/projets.html
@@ -35,7 +35,7 @@
   </div>
 </section>
 <!--portfolio start-->
-<section class = 'protfolio' id = 'ourwork'>
+<section id="main-content">
   <div class="text-intro">
     <h2>GITHUB WORK</h2>
   </div>
