--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       </div>
     </div>
     <div class="third-left">
-      <div float:left; width:33%><img src="images/graduate_2jeong.png" alt="" ></div>
-      <div float:left; width:33%><h3>Education</h3></div>
+      <img src="images/graduate_2jeong.png" alt="" align="left">
+      <h3>Education</h3>
       <div>
         <p>서울시립대학교 통계학과 석사과정 (2018.3~)</p>
         <p>Master's course of Statistics </p>
