--- a/projets.html
+++ b/projets.html
@@ -36,7 +36,7 @@
 </section>
 <!--portfolio start-->
 <section>
-  <div class="text-intro">
+  <div class="text-bottom">
     <h2>GITHUB WORK</h2>
   </div>
   <div class = 'row' style='margin: 0 auto 30px auto;'>
