--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       </div>
     </div>
     <div class="third-left">
-      <img src="images/graduate_2jeong.png" alt="" align="left">
+      <img src="images/graduate_2jeong.png" alt="" align="middle">
       <h3>Education</h3>
-      <div>
+      <br clear=left>
         <p>서울시립대학교 통계학과 석사과정 (2018.3~)</p>
         <p>Master's course of Statistics </p>
         <p>University of Seoul</p>
@@ -55,7 +55,6 @@
         <p>Bachelor Degrees of Statistics </p>
         <p>Dongguk University </p>
         <p><a href="#" class="more">En savoir plus</a></p>
-      </div>
     </div>
   </div>
 </section>
