--- a/projets.html
+++ b/projets.html
@@ -33,7 +33,9 @@
     <div class="img-second"><a href="#"><img src="images/shanghai.jpg" alt=""></a></div>
   </div>
   </div>
+</section>
 <!--portfolio start-->
+<section class = 'protfolio'>
   <div class="text-bottom">
     <h2>GITHUB WORK</h2>
   </div>
