--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="third-left">
-      <img src="images/graduate_2jeong.png" alt="" align="middle">
+      <img src="images/graduate_2jeong.png" alt="" align="left">
       <h3>Education</h3>
       <br clear=left>
         <p>서울시립대학교 통계학과 석사과정 (2018.3~)</p>
