--- a/projets.html
+++ b/projets.html
@@ -35,9 +35,12 @@
   </div>
 </section>
 <!--portfolio start-->
-<section class = 'protfolio'>
-  <div class="text-bottom">
-    <h2>GITHUB WORK</h2>
+  <section class = 'protfolio'>
+  <div class = 'container'>
+      <div class = 'heading'>
+          <h2>Github Works</h2>
+          <h3>What I have done and am doing</h3>
+      </div>
   </div>
   <div class = 'row' style='margin: 0 auto 30px auto;'>
       <div id="feed" style = 'margin: 0 50px;'>
@@ -50,6 +53,6 @@
           </script>
       </div>
   </div>
-</section>
+  </section>
 </body>
 </html>
