--- a/projets.html
+++ b/projets.html
@@ -36,12 +36,9 @@
 </section>
 <!--portfolio start-->
   <section class = 'protfolio'>
-  <div class = 'container'>
-      <div class = 'heading'>
-          <h2>Github Works</h2>
-          <h3>What I have done and am doing</h3>
-      </div>
-  </div>
+    <div class="text-in">
+      <h2>Works</h2>
+    </div>
   <div class = 'row' style='margin: 0 auto 30px auto;'>
       <div id="feed" style = 'margin: 0 50px;'>
           <script>
