--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
   </div>
   <div class="columns features">
     <div class="third-left">
+      <img src="images/mail_2jeong.png" alt="" align="left">
       <h3>Contact</h3>
+      <br clear=left>
       <p>If you want something to be built or just to say hi, feel free to shoot me a message.</p>
       <p>haniijeong827@gmail.com</p>
       <p><a href="#" class="more">En savoir plus</a></p>
     </div>
     <div class="third-left">
+      <img src="images/file_2jeong.png" alt="" align="left">
       <h3>Skills</h3>
+      <br clear=left>
       <p>I am familiar with R. I get started learning Python for data science. </p>
       <div class="container">
         <div class="imgeff"><a href="#"><img src="images/R_2jeong.PNG" alt="" ></a></div>
