--- a/projets.html
+++ b/projets.html
@@ -35,7 +35,7 @@
   </div>
 </section>
 <!--portfolio start-->
-  <section class = 'protfolio'>
+  <section>
     <div class="text-in">
       <h2>Works</h2>
     </div>
