--- a/projets.html
+++ b/projets.html
@@ -33,12 +33,12 @@
     <div class="img-second"><a href="#"><img src="images/shanghai.jpg" alt=""></a></div>
   </div>
   </div>
+  <div class="text-in">
+    <h2>Works</h2>
+  </div>
 </section>
 <!--portfolio start-->
-  <section>
-    <div class="text-in">
-      <h2>Works</h2>
-    </div>
+  <section class = 'protfolio'>
   <div class = 'row' style='margin: 0 auto 30px auto;'>
       <div id="feed" style = 'margin: 0 50px;'>
           <script>
