--- a/projets.html
+++ b/projets.html
@@ -34,11 +34,16 @@
   </div>
   </div>
   <div class="text-in">
-    <h2>Works</h2>
+    <h2>GitHub Works</h2>
   </div>
 </section>
 <!--portfolio start-->
-  <section class = 'protfolio'>
+  <section class = 'protfolio' id = 'ourwork'>
+  <div class = 'container'>
+      <div class = 'heading'>
+          <h3>What I have done and am doing</h3>
+      </div>
+  </div>
   <div class = 'row' style='margin: 0 auto 30px auto;'>
       <div id="feed" style = 'margin: 0 50px;'>
           <script>
