--- a/projets.html
+++ b/projets.html
@@ -33,12 +33,12 @@
     <div class="img-second"><a href="#"><img src="images/shanghai.jpg" alt=""></a></div>
   </div>
   </div>
-  <div class="text-in">
+  <div class="text-intro">
     <h2>GitHub Works</h2>
   </div>
 </section>
 <!--portfolio start-->
-  <section class = 'protfolio' id = 'ourwork'>
+  <section class = 'protfolio'>
   <div class = 'container'>
       <div class = 'heading'>
           <h3>What I have done and am doing</h3>
