--- a/projets.html
+++ b/projets.html
@@ -38,9 +38,11 @@
   </div>
 </section>
 <!--portfolio start-->
-<section class = 'protfolio'>
+<!--portfolio start-->
+  <section class = 'protfolio' id = 'ourwork'>
   <div class = 'container'>
       <div class = 'heading'>
+          <h2>Github Works</h2>
           <h3>What I have done and am doing</h3>
       </div>
   </div>
