--- a/projets.html
+++ b/projets.html
@@ -29,7 +29,7 @@
     <h2>Works</h2>
   </div>
   <div class="columns">
-    <div class="img-first"><a href="#"><img src="images/supview.jpg" alt=""></a></div>
+    <div >서울시립대학교 통계학과 '??통계학 연구실'입니다. </div>
     <div class="img-second"><a href="#"><img src="images/shanghai.jpg" alt=""></a></div>
   </div>
   </div>
