--- a/projets.html
+++ b/projets.html
@@ -39,7 +39,7 @@
 </section>
 <!--portfolio start-->
 <!--portfolio start-->
-  <section class = 'protfolio' id = 'ourwork'>
+  <section class = 'protfolio' id = 'main-content'>
   <div class = 'container'>
       <div class = 'heading'>
           <h2>Github Works</h2>
