--- a/projets.html
+++ b/projets.html
@@ -31,12 +31,12 @@
   <div class="columns">
     <div >서울시립대학교 통계학과 '??통계학 연구실'입니다. </div>
     <div class="img-second"><a href="#"><img src="images/shanghai.jpg" alt=""></a></div>
+    <br clear=left>
   </div>
   </div>
 </section>
 <!--portfolio start-->
-<!--portfolio start-->
-  <section class = 'protfolio' id = 'main-content'>
+<section class = 'protfolio'>
   <div class = 'container'>
       <div class = 'heading'>
           <h2>Github Works</h2>
