--- a/projets.html
+++ b/projets.html
@@ -29,14 +29,13 @@
     <h2>Works</h2>
   </div>
   <div class="columns">
-    <div >서울시립대학교 통계학과 '??통계학 연구실'입니다. </div>
+    <div >서울시립대학교 통계학과 '???통계학 연구실'입니다. </div>
     <div class="img-second"><a href="#"><img src="images/shanghai.jpg" alt=""></a></div>
     <br clear=left>
   </div>
   </div>
-</section>
 <!--portfolio start-->
-<section class = 'protfolio'>
+<div class = 'protfolio'>
   <div class = 'container'>
       <div class = 'heading'>
           <h2>Github Works</h2>
@@ -54,6 +53,7 @@
           </script>
       </div>
   </div>
-  </section>
+</div>
+</section>
 </body>
 </html>
