--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="shortcut icon" type="image⁄x-icon" href="images/homepage.png">
+<!--github activity-->
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/2.0.2/octicons.min.css">
+<link rel="stylesheet" href="css/github-activity-0.1.5.min.css">
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.2/mustache.min.js"></script>
+<script type="text/javascript" src="js/github-activity-0.1.5.min.js"></script>
 </head>
 <body>
 <header>
@@ -59,7 +64,12 @@
         <p>Dongguk University </p>
     </div>
   </div>
+</section>
   <!--portfolio start-->
+<section id="main-content">
+    <div class="text-intro">
+      <h2>ABOUT ME</h2>
+    </div>
   <div class = 'protfolio'>
     <div class = 'container'>
         <div class = 'heading'>
