--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="text-intro">
       <h2>ABOUT ME</h2>
     </div>
-  <div class = 'protfolio'>
+  <div class = 'protfolio features'>
     <div class = 'container'>
         <div class = 'heading'>
             <h2>Github Works</h2>
