--- a/index.html
+++ b/index.html
@@ -61,15 +61,12 @@
         <p>University of Seoul</p>
         <p>동국대학교 통계학과 졸업 (2014.3~2018.2)</p>
         <p>Bachelor Degrees of Statistics </p>
-        <p>Dongguk University </p>
+        <p>Dongguk University 111 </p>
     </div>
   </div>
 </section>
   <!--portfolio start-->
 <section id="main-content">
-    <div class="text-intro">
-      <h2>ABOUT ME</h2>
-    </div>
   <div class = 'protfolio features'>
     <div class = 'container'>
         <div class = 'heading'>
