--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
         <p>University of Seoul</p>
         <p>동국대학교 통계학과 졸업 (2014.3~2018.2)</p>
         <p>Bachelor Degrees of Statistics </p>
-        <p>Dongguk University 111 </p>
+        <p>Dongguk University </p>
     </div>
   </div>
 </section>
   <!--portfolio start-->
 <section id="main-content">
+  <p style="color:blue;font-size:30px;">Github Works</p>
   <div class = 'protfolio features'>
     <div class = 'row' style='margin: 0 auto 30px auto;'>
         <div id="feed" style = 'margin: 0 50px;'>
