--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </section>
   <!--portfolio start-->
 <section id="main-content">
-  <p style="color:blue;font-size:30px;">Github Works</p>
+  <p style="color:#606060;font-size:40px; text-align:center;">Github Works</p>
   <div class = 'protfolio features'>
     <div class = 'row' style='margin: 0 auto 30px auto;'>
         <div id="feed" style = 'margin: 0 50px;'>
