--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </section>
   <!--portfolio start-->
 <section id="main-content">
-  <div class = "line-bottom">
+  <div class = "border-stlyes">
     <p style="color:#606060;font-size:40px; text-align:center;">Github Works</p>
   </div>
   <div class = 'protfolio features'>
