--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <p style="color:#606060;font-size:40px; text-align:center;">Github Works</p>
   </div>
   <div class = 'protfolio features'>
+    <div class = 'row' style='margin: 0 auto 30px auto;'>
         <div id="feed" style = 'margin: 0 50px;'>
             <script>
                 GitHubActivity.feed({
@@ -80,6 +81,7 @@
                 });
             </script>
         </div>
+    </div>
   </div>
 </section>
 </body>
