--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </div>
 </section>
   <!--portfolio start-->
-<section id="main-content">
+<section>
   <div class = "border-stlyes">
     <p style="color:#606060;font-size:40px; text-align:center;">Github Works</p>
   </div>
