--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
   </div>
   <!--portfolio start-->
-  <div class = "border-stlyes">
+  <div class = "line-bottom">
     <p style="color:#606060;font-size:40px; text-align:center;">Github Works</p>
   </div>
 </section>
