--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </div>
   <!--portfolio start-->
   <div class = "line-bottom">
-    <p style="color:#606060;font-size:40px; text-align:center;">Github Works</p>
+    <p>Github Works</p>
   </div>
 </section>
 </body>
