--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </div>
   <!--portfolio start-->
   <div class = "line-bottom">
-    <p>Github Works</p>
+    <h2>GITHUB WORKS</h2>
   </div>
 </section>
 </body>
