--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </div>
   <!--portfolio start-->
   <div class = "line-bottom">
-    <p font-size:40px; color:#606060; text-align:center; font-family:"Open Sans" >GITHUB WORKS</p>
+    <h2>GITHUB WORKS</h2>
   </div>
 </section>
 </body>
