--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
   <div class = "line-bottom">
     <h2>GITHUB WORKS</h2>
   </div>
+  <div class = 'protfolio features'>
+  <div class = 'row' style='margin: 0 auto 30px auto;'>
+      <div id="feed" style = 'margin: 0 50px;'>
+          <script>
+              GitHubActivity.feed({
+              username: "12jeong",
+              selector: "#feed",
+              limit: 5
+              });
+          </script>
+      </div>
+  </div>
+</div>
+
 </section>
 </body>
 </html>
