--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div class = "line-bottom">
     <h2>GITHUB WORKS</h2>
   </div>
-  <div class = 'protfolio features'>
+  <div class = 'protfolio'>
       <div id="feed" style = 'margin: 0 50px;'>
           <script>
               GitHubActivity.feed({
