--- a/index.html
+++ b/index.html
@@ -69,15 +69,19 @@
     <h2>GITHUB WORKS</h2>
   </div>
   <div class = 'protfolio'>
-      <div id="feed" style = 'margin: 0 50px;'>
-          <script>
-              GitHubActivity.feed({
-              username: "12jeong",
-              selector: "#feed",
-              limit: 5
-              });
-          </script>
-      </div>
+    <div class = 'row' style='margin: 0 auto 30px auto;'>
+    <div id="feed" style = 'margin: 0 50px;'>
+        <script>
+            GitHubActivity.feed({
+            username: "Monster-Moon",
+            selector: "#feed",
+            limit: 5
+            });
+        </script>
+    </div>
+    </div>
+  </div>
+
 </div>
 
 </section>
