--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div id="feed" style = 'margin: 0 50px;'>
         <script>
             GitHubActivity.feed({
-            username: "Monster-Moon",
+            username: "12jeong",
             selector: "#feed",
             limit: 5
             });
