--- a/projets.html
+++ b/projets.html
@@ -22,7 +22,7 @@
   </nav>
 </header>
 <section id="home-head" class="work">
-  <h1>We built identity for local and international clients.</h1>
+  <h1>知之者 不如好之者 好之者 不如樂之者</h1>
 </section>
 <section id="main-content">
   <div class="text-intro">
