--- a/projets.html
+++ b/projets.html
@@ -26,10 +26,14 @@
 </section>
 <section id="main-content">
   <div class="text-intro">
-    <h2>Works</h2>
+    <h2>LAB WORKS</h2>
   </div>
   <div class="columns">
-    <div >서울시립대학교 통계학과 '???통계학 연구실'입니다. </div>
+    <div >
+      <h2> 서울시립대학교 통계학과 <a href="http://ranking.uos.ac.kr/"> 전종준</a> 교수님 연구실 </h2>
+
+
+    </div>
     <div class="img-second"><a href="#"><img src="images/shanghai.jpg" alt=""></a></div>
   </div>
 </section>
