--- a/index.html
+++ b/index.html
@@ -56,11 +56,9 @@
       <img src="images/graduate_2jeong.png" alt="" align="left">
       <h3>Education</h3>
       <br clear=left>
-        <p>서울시립대학교 통계학과 석사과정 (2018.3~)</p>
-        <p>Master's Course of Statistics </p>
+        <p>Master's Course of Statistics(2018.3~) </p>
         <p>University of Seoul</p>
-        <p>동국대학교 통계학과 졸업 (2014.3~2018.2)</p>
-        <p>Bachelor Degrees of Statistics </p>
+        <p>Bachelor Degrees of Statistics (2014.3~2018.2)</p>
         <p>Dongguk University </p>
     </div>
   </div>
